# ChangeLog for dev-lang/elixir
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/elixir/ChangeLog,v 1.13 2014/03/10 11:25:50 hasufell Exp $

*elixir-0.12.5 (10 Mar 2014)

  10 Mar 2014; Julian Ospald <hasufell@gentoo.org> +elixir-0.12.5.ebuild:
  version bump

*elixir-0.12.4 (04 Mar 2014)

  04 Mar 2014; Julian Ospald <hasufell@gentoo.org> +elixir-0.12.4.ebuild:
  version bump

*elixir-0.12.2 (17 Jan 2014)

  17 Jan 2014; Julian Ospald <hasufell@gentoo.org> +elixir-0.12.2.ebuild:
  version bump

*elixir-0.12.1 (07 Jan 2014)

  07 Jan 2014; Julian Ospald <hasufell@gentoo.org> +elixir-0.12.1.ebuild:
  version bump

  19 Dec 2013; Julian Ospald <hasufell@gentoo.org> metadata.xml:
  update metadata.xml

*elixir-0.12.0 (19 Dec 2013)

  19 Dec 2013; Julian Ospald <hasufell@gentoo.org> +elixir-0.12.0.ebuild:
  version bump

*elixir-0.11.2 (17 Nov 2013)

  17 Nov 2013; Julian Ospald <hasufell@gentoo.org> +elixir-0.11.2.ebuild:
  version bump

*elixir-0.10.3 (03 Oct 2013)

  03 Oct 2013; Julian Ospald <hasufell@gentoo.org> +elixir-0.10.3.ebuild:
  version bump

*elixir-0.10.2 (03 Sep 2013)

  03 Sep 2013; Julian Ospald <hasufell@gentoo.org> +elixir-0.10.2.ebuild:
  version bump

*elixir-0.10.1 (04 Aug 2013)

  04 Aug 2013; Julian Ospald <hasufell@gentoo.org> +elixir-0.10.1.ebuild:
  version bump

*elixir-0.10.0 (17 Jul 2013)

  17 Jul 2013; Julian Ospald <hasufell@gentoo.org> +elixir-0.10.0.ebuild:
  version bump

  13 Jul 2013; Julian Ospald <hasufell@gentoo.org> elixir-0.9.3.ebuild:
  add x86 arch

*elixir-0.9.3 (13 Jul 2013)

  13 Jul 2013; Julian Ospald <hasufell@gentoo.org> +elixir-0.9.3.ebuild,
  +files/elixir-0.9.3-makefile.patch, +metadata.xml:
  initial import wrt #476288