@@ -12,6 +12,7 @@ DIST elixir-0.12.1.tar.gz 873034 SHA256 edefb36495a4ebb559d5fbb1ac54a6778a902d8c
 DIST elixir-0.12.2.tar.gz 877428 SHA256 9d574f9bfd92ccdea6aeea056b139518996d28e8a2ee53e0ea03e34d739b3c7c SHA512 a71b1fc5921a2251a1b8360909074d785d043825d04dea2bc503b3b70d551b2fe221a2ed1a72e5b8a6962e1e687980dc1bb62750e4f08ae17a892b8b6253f605 WHIRLPOOL d0dff5ba2a4e1e752e3cfe64399ea97be5cbc828bbac2bf0971955400c5217be6fcd7b79fd13feb71981cdd187130619bcbdb014712e6089d9e3275b841c7343
 DIST elixir-0.12.4.tar.gz 876744 SHA256 3454eaa197db236d1a6bb3c7ad7183ef02eb4566d685ed93e55421bf645c3239 SHA512 f6fcff53b2736885b0a28218be188eb002cb5b530ef13269e26e985222f0d1147435fb1c017e4862cb3e6fbd07fdef925a694c601e3623388ed706477a61d311 WHIRLPOOL 812c07d6c02f632e44cf7b11b2b6fadc69ae3fcf5d7567caaea9bb7f45775293e5742422328405a1b1580b06f9177200c5d671fa97a9ae5be5dbe832de3b5673
 DIST elixir-0.12.5.tar.gz 876886 SHA256 8b6ad20decb0a71240d00005daca2e2145a721552455896e091477f53d26a47c SHA512 63e436938deec9916c11598af24897d80a3c3dcda983e5ff281a595b2ef02d4605fb13f9cbef442653fd4e461db77e6588589c280f9425ee9163970ca8752532 WHIRLPOOL 9e59cc1a4e683882d78e16cf266422b193e95f58cf3cc705ba41af20b9cc376e432bfc45b69a98a15cd0494dee72ea1eba443e69d4ca2bf5a250bb42cdf786fb
+DIST elixir-0.13.0.tar.gz 902936 SHA256 ab7c5843cceba712c63237cf47ad2c8968b647fff351621f49c69586c686121c SHA512 4003d67f1f9dc857c8f4b90a57bbd4ce142292ef800fa8f63926e6278cb5b48d37848083e0616f57518dc446c4af8fe70c107f376a242ac26a676a1302a93735 WHIRLPOOL 2509aee74c4fdb3cbd3fa480c6126ad93d7ba1878e3b6d019af8c9bf0a25c9b40a5808d5789470a2b48de26e6c351ceb094707f62c498e8ef7c9ac29a8e499d7
 DIST elixir-0.9.3.tar.gz 712024 SHA256 220b842271545b1f4b11a69a1a20dc826f2e8587d225d72927307c1a6d8faefe SHA512 7e5584be12d5ba063a88db9284316a18b254cdc0da873677d05bcd19e723cd3635c2f41017aa4f54ba62a99c692246d8e70acf49f190e6f801f612bab43782e5 WHIRLPOOL 70ea93e72caf4a84a36c6826e0749b1d4763da546230d3f443a3943e031a3dfed7100ce4aff666712f1be84c441d2a9b713b7ffbe30749e0de92a53ae71e2063
 EBUILD elixir-0.10.0.ebuild 694 SHA256 1fcc5228b9636f531348eb7f61087f42801ef88adb0e558b952f6cc426ad5cd7 SHA512 3405af44cd65ccc930ca3dbfe773946e1b4c6afac03f791ff3a55a05fe81d13fc48f70e88c46b33e6bf7a0709ee2fb20b43d6446d71ff31b3c2d468dcbf9f0a3 WHIRLPOOL c87a16d7f39716185ace19d339ffa7d138d53f98ca564722e6642c9e6bd8dbd7eeded30e95629b128fd6b865d93301104f3f4043b8c37e01624edb500dfdbc0f
 EBUILD elixir-0.10.1.ebuild 694 SHA256 b6439ad46d2dfd86f62dc2ba676164a15ca7722233428b7d0dc09f1eb2fedf13 SHA512 6ee090c11eb99482a7493a1763654c529354b8b0588af4f860657456f3409029a1328c8eb6a106016489dc19d8c69508856927c747fc9519f18e90086aaa2f06 WHIRLPOOL 034748bb457b78d1d5b1b1f22d3e3ae5c581a0b33fada24a9a425f9cb076d34737438d841ac59fce3416f30d3d9956fdf531c505a2e1c52c601b90ae21ff25bb
@@ -23,25 +24,26 @@ EBUILD elixir-0.12.1.ebuild 694 SHA256 2eb59194b52313ce1253f3adcd20cd1abaf6a2ed6
 EBUILD elixir-0.12.2.ebuild 694 SHA256 effb66f1313e0f92b8aa0f0de875199d9469f18f880dce1162dcea3baf160b59 SHA512 8b4c5003645e3e1bdb9d12327a82a3d7f5a59c98fcc5ab31aeaef5aba777bb28385eb8ea76c573462aecd07db54d6c7f3e8728756e9b842622513920ea23f1ed WHIRLPOOL 2b19b59477e8e143c0de6d8ad5ad66eca040174da792c67d8a0e7a0a3b980bbdae5a146270bb902c82ebb598d85da54c95a84702ed82b4e9b6e0145aea289d5a
 EBUILD elixir-0.12.4.ebuild 694 SHA256 736406b699a63f9809b7988eafa8eee9177f7b7bc486885326e54464da48a81b SHA512 59eb49b1965ed169ccffdaaa69642a33b3eedef727be81b0eb81bb364b8d187c3efdee65f63f2a7f4b3e0375461f539040db8b7ef67c6627989c01501af3a249 WHIRLPOOL 4971d1f873d7201af2a791f02d58f6d713773f0934d4ef6e5c80e8aa8285b5539f9e079c69f3d7d4ae18384cf140e8cfe245af543e7635eaa9614046001f2afa
 EBUILD elixir-0.12.5.ebuild 694 SHA256 612e57ed1683954da92b00a0a4fdcf5fa17a06889bbd09048204c9a5892cb866 SHA512 210816462aa8068a1dcd98ba801fe446824b2ddb315f31dc6d65839d6c689aab66297a955d8c8a8e5215efbc840fbfa289905f8c5198d819de441df166c0ec6c WHIRLPOOL 95b883cd49ac45c510bf88dce1a685c08296ffd1e1d1b1c9369ef960ea396c822b71f446afca4bbe188ffc5bc692eef0f83f10fb1c5a4bdeb5bb5ed91f1f5489
+EBUILD elixir-0.13.0.ebuild 694 SHA256 b2f439b7c930aef9960479486e3890772c1e332370f95c2c94d9b4fe899f13a9 SHA512 fb243f5772b222113d062e10c28a7f64791bc7d30ce0a2d81ca732c704338c306921c8d36f169f26faae23bfefb81a51c19ba4ef22ee2eba49d6102c4c8b33aa WHIRLPOOL 52f96ea191694facef19950022bbc10838318b6395c4d4bc68b3cead9db98a55690ee0c8d744db965214c2e98dac88bb09590bc29363b2edf31c61676cbab9be
 EBUILD elixir-0.9.3.ebuild 761 SHA256 b492fb1f18f7f97879eb07a34f6138aef1657dd7289545bcbce65938ddb4b7b3 SHA512 df97de280d0f775a71f8cc853f7164e8450b868e59903ca6cc00e4bb55f83af90d7afeb509b7861d9c9f7569c872bc935b389250545d87153ebd80839b506fbe WHIRLPOOL 0e831012b800fc176fb3a3bbec33d2d5eb2bfe3500519b040553969c369a25f9b3ad509b629cd445c49359b403bce4add390730ac19f8a55ad7ed36379a9cdca
-MISC ChangeLog 1766 SHA256 0875d238a846cda843925cc05f79d13ea7b7c94fcc903b72da170e32170b04a9 SHA512 dc404948d064e1f73723c058cb52fbcfab1f7f608efb4aa762b1ea534f7457761e5d91b0dce625221c37501c14480ab0b3b819b314af33deddd0f1b80b72db13 WHIRLPOOL 817293e88340e88563f7fc9b1f5cfa8d0eed6a438e96c57891e435b6021b70c9a03797609f5bde30230fbe7309698e317f59ea068ccf421d1c8d9fab86e2c67f
+MISC ChangeLog 1898 SHA256 7aff18a9750715108b43a17f9a28cb06ff0cdc5844d6a7f97ce987584e998641 SHA512 9aa581a61af5b28022ff0f1a738fb2a6a860e812d3fbac0e86faefbe5bb9f4cf9977f1682f3b995845fe2d90ae18d343ead27a0501d61367a3262977086d0544 WHIRLPOOL 47b4c77cc9a842530b415e3b914753a563abf1baffcbd5a1456ed2d1f8e0d95d6c0cdffa2740f7cadd9ba9a09d18c332fba279c3ec32917da957f8bff32f7314
 MISC metadata.xml 555 SHA256 661e7d83cb154c9e3569d7b1f38bca14ddb482633f7c90e5d81acc49c8c2d06c SHA512 c6181d61e42312992049b0820458c1bd11e556579361b9489dacda218f8241624814d7f11caf0bfb6f1cc807eecc764384ba26e3396b44ff0e268f832ef025f4 WHIRLPOOL 26d8a3689116db2b1e6a0a61f2c3bbb1142e37b1f1e399061c885910644a15a815cda57c12ea29bd90025e672596de65f5f4545eac32efe198342161c3443baa
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTHaFGXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJTVZjhXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzMDlCNDQ4NjEyNDI4NjA5REVEMDI3MzIy
-MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAg1iAP/jPC2WEUcQ8gDv1QsgV81csN
-9vTZbMIMrSsuW6/DhtyJ7wJAchYcDDLzS7T4ZZueD2FAOfq6Pi88L1wIqLIDp1hX
-pIfzAoSY7AixkOvUAH2q2hdPh0XFsny+4g+OEay/ZzWY6WvGv/j6qJfAZ35EE5oC
-mJF17QtQLetSb9lg6wAkQPkaTV3N2TAAM3GwgsAIgE5xF/jlAQ5wIF3sIpwp87K3
-KBiZ3pORhyW+TvCD4UjKPJe3b6wIuvzkMI3eTXOle2f0tBkqdlSZKwL1QicicP92
-g8aPdUIYMy3llVYMKAAFoS6Qo2n91MOKTTTiQRCKUmRaegYTHJ6uWQoRRdPdLLZg
-PjWIKp5OVKHkp/L2TzqwWtAYcvSrqVL+VQxd+hJFmh2Q9RHGkFHEMVVy7wEKgXsV
-4pHQHrcnn8YEhUid2XequISTW42oT8Pe61eDxogXVicaERw0WhRZCRbID1R5loXo
-gWHu+aZbkb6ja1xKjeZO0gaqD+ViGetZ06DUlJtLM9JfsYCqKyAMF5dCll24Bn0f
-fZzj4xhCasH4X97pZWnIduHwxAL4w6/4uDzje1ONo5MgIyzKpiPYjYdRIbNeoHDL
-vJeDfgVfrWxqvfg4RaI3K16v/8UNassyNIJXu4nE6SxmQbiBUBFK3IBFbaouwmdp
-NaCxMZRw3a8fcxh4Wado
-=Jx8R
+MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAgoQUQAKXlW4CfrNSJLNpQXGRjjDPw
+1iXWtXWXV3+WmXLyk7y+st9C2yjKVUTjlLIHRqGUGGsGiZItnSl4UtQ9D7/FDcYA
+zeRSx+/PW6h743kIW4XtgxDSKABFc5xpLiQZ69i5OCf+zGmLhjEozE1AueIsERG2
+bWIDsNW9cOd7pdpVzfS7H1ph1V4B1SCA7WW/HkrYHJgX3/lBCM12DLVPHgfvRzX8
+tZOIyCzkzXCSsNKW4Peu60QkAV8z41GW5/K5jBUlsQnmHjc55fPMPCL1KQ4Kxlp8
+DeBVtwlJ6KhUNWoVmh0aZaa39pBZE0BYaV/2ROPvOAOVaQEHAwwqUyKW35jBnlvY
+icyZLTh6Uyg5eG2BMaTUojKPQo0xpQ5s5xtmNFwWQOvr434aIU8K5nYlpU8B4wCD
+18Jsubo4cADuRwC0gkPoiX3JhxhQtoFC+3gDbjBx7lJOUgUBjAA8UJKHx2tlsCFN
+4se5XpUniQ0X7ogy9gZM1I4b3nf+Tc6P9ltmL/fAjcsrtWTO3fg0cjHmWhcDJbdX
+mthQIpJ7mA9CTDogdPSV2JqyOxME9qfet3cZvjngOP1jShmMV8JZt5WApObwS46J
+X5/s4v/LXcGAgEZHbE6wlR/5YbXuaiT9mkJG3A6xLCKabyAEDFvEtuTlbWHg/Jq1
+0B4kdZbU87NwvgJNE47l
+=GsLD
 -----END PGP SIGNATURE-----
