@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile install
+DEPEND=>=dev-lang/erlang-17
+DESCRIPTION=Elixir programming language
+EAPI=5
+HOMEPAGE=http://elixir-lang.org
+KEYWORDS=~amd64 ~x86
+LICENSE=Apache-2.0 ErlPL-1.1
+RDEPEND=>=dev-lang/erlang-17
+SLOT=0
+SRC_URI=https://github.com/elixir-lang/elixir/archive/v0.13.0.tar.gz -> elixir-0.13.0.tar.gz
+_eclasses_=multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=d34f1cb3de710c1b00d659494f4d2f57
