@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/elixir
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/elixir/ChangeLog,v 1.13 2014/03/10 11:25:50 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/elixir/ChangeLog,v 1.14 2014/04/21 22:17:02 hasufell Exp $
+
+*elixir-0.13.0 (21 Apr 2014)
+
+  21 Apr 2014; Julian Ospald <hasufell@gentoo.org> +elixir-0.13.0.ebuild:
+  version bump wrt #508316
 
 *elixir-0.12.5 (10 Mar 2014)
 
